--- a/package.json
+++ b/package.json
@@ -63,6 +63,6 @@
     "workbox-strategies": "^6.4.2"
   },
   "devDependencies": {},
-  "name": "hugo-theme-bootstrap-skeleton",
+  "name": "src",
   "version": "0.1.0"
 }
